--- a/assets/src/css/front.scss
+++ b/assets/src/css/front.scss
@@ -36,8 +36,8 @@
       height: 180px;
       background: #eaeaea;
       img{
-        width: 100%;
-        height: 100%;
+        width: 100% !important;
+        height: 100% !important;
         object-fit: contain;
         object-position: center;
       }
