--- a/assets/src/css/front.scss
+++ b/assets/src/css/front.scss
@@ -48,14 +48,13 @@
       display: flex;
       flex-flow: column wrap;
       justify-content: space-between;
-      a{
+      a.title-post{
         text-decoration: none;
-      }
-      h4{
         max-height: 45px;
         display: block;
         overflow: hidden;
         font: normal bold 20px/22px 'Roboto', sans-serif;
+        color: var(--main-black);
       }
     }
     .row-bottom{
@@ -106,7 +105,7 @@
         width: 100%;
         padding:  20px;
         gap: 15px;
-        h4{
+        a.title-post{
           font: normal 700 18px/20px Roboto,sans-serif;
           max-height: 40px;
         }
